--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         <details>
           <summary>A video clip shown in the meeting</summary>
           <video controls width="500">
-            <source src="uhh.mp4" type="video/mp4"/>
+            <source src="uhh.webm" type="video/webm"/>
           </video>
         </details>
         <hr/>
