part 2 finished, readme update

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         <details>
           <summary>A video clip shown in the meeting</summary>
           <video controls width="500">
-            <source src="uhh.webm" type="video/webm"/>
+            <source src="uhh.webm" type="video/webm" codecs="vp8"/>
           </video>
         </details>
         <hr/>
@@ -129,7 +129,7 @@
 
     </main>
     <footer>
-      meow
+      repo found <a href="https://github.com/mlgi/Lab2">here</a>
     </footer>
   </body>
 </html>
