--- a/index.html
+++ b/index.html
@@ -13,7 +13,12 @@
        <p>20 October 2021</p>
        <h2>Contents</h2>
        <nav>
-         <ol></ol>
+         <ol>
+           <li>Present</li>
+           <li>Agenda</li>
+           <li>Minutes</li>
+           <li>Additional Notes</li>
+         </ol>
        </nav>
      </header> 
      <hr/>
