--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
               <option value="Left">Left</option>
               <option value="Right">Right</option>
             </select><br/>
-            <button>Submit</button>
+            <button>Press</button>
           </fieldset>
         </form>
       </section>
