added styles.css, darkmode

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>FFXIV Raid Discussion</title>
     <meta name="author" content="G'raha Tia"/>
     <link rel="icon" type="image/ico" href="icon.png"/>
+    <link rel="stylesheet" href="styles.css"/>
   </head>
   <body>
     <main>
