--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="author" content="G'raha Tia"/>
     <link rel="icon" type="image/ico" href="icon.png"/>
     <link rel="stylesheet" href="styles.css"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
   </head>
   <body>
     <main>
