--- a/index.html
+++ b/index.html
@@ -10,22 +10,28 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
   </head>
   <body>
-    <main>
-     <header>
-       <h1>FFXIV Endwalker 6.2 Raid Planning</h1>
-       <p>Scheduling and Goals</p>
-       <p>20 October 2021</p>
-       <h2>Contents</h2>
-       <nav>
-         <ol>
-           <li>Present</li>
-           <li>Agenda</li>
-           <li>Minutes</li>
-           <li>Additional Notes</li>
-         </ol>
-       </nav>
-     </header> 
+    <header>
+     <h1>FFXIV Endwalker 6.2 Raid Planning</h1>
+     <p>Scheduling and Goals</p>
+     <p>20 October 2021</p>
      <hr/>
+    </header> 
+    
+    <main>
+     <section>
+      <h2>Contents</h2>
+      <nav>
+        <ol>
+          <li>Present</li>
+          <li>Agenda</li>
+          <li>Minutes</li>
+          <li>Additional Notes</li>
+        </ol>
+      </nav>
+      <hr/>
+      </section> 
+
+
      <section>
       <h2>Present</h2>
       <ul>
