Edited present-section to take less space

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
      <section>
       <h2>Present</h2>
-      <ul>
+      <ul id="attendance">
         <li>Jimmy Joe</li>
         <li>Billy Bob</li>
         <li>Timmy Tom</li>
