used color name, text css, margin and padding, psuedo-class selector, border

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
      <hr/>
     </header> 
     
-    <main>
+    <main class="content">
      <section>
       <h2>Contents</h2>
       <nav>
@@ -113,7 +113,7 @@
 
       <section>
         <form>
-          <fieldset>
+          <fieldset class="test">
             <p>Form Test</p>
             Name: 
             <input type="text"/><br/>
